// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tag > renders default as expected 1`] = `
<div>
  <span
    class="tag inline-flex items-center px-4 py-2 text-xs font-semibold w-fit text-color-secondary-text container-lined"
    role="status"
  >
    Basic tag
  </span>
</div>
`;

exports[`Tag > renders with optional args 1`] = `
<span
  class="tag inline-flex items-center px-4 py-2 text-xs font-semibold w-fit text-color-secondary-text container-lined custom-class"
  role="status"
>
  Custom tag
</span>
`;
